# frameworks-bootstrap

./: .gitignore  .gitlab-ci.yml  README.md
CI_CD/: README.md
CI_CD/springboot/: dependencies.sh  security.sh  sonarqube.sh
Docker/multistage_build/: Dockerfile  app.go  go.mod  go.sum
GraphQL/: README.md
GraphQL/queries/: mutation-write.graphql  mutation-write.sh  query-recent.graphql  query-recent.sh
GraphQL/spring-boot-integration/: build.gradle
Kafka/: README.md  docker-compose.yaml
Kafka/kafka-connect/: docker-compose.yaml
Kafka/kafka-connect/sink/: Dockerfile  auth.properties  sink-conf.json
Kafka/kafka-connect/source/: Dockerfile  source-conf.json
Kafka/kafka-connect/source/data/: data_01.csv  spool_conf.tmp
Kafka/kafka-raw/: pom.xml
Kafka/kafka-raw/src/main/resources/avro/: hello_message.avsc
Kafka/kafka-streams/: pom.xml
Kafka/ksql/: Dockerfile  ksql-headless.sql
Kafka/quickstart/: 0_start_server.sh  1_create_topic.sh  2_write_event.sh  3_read_events.sh
Kubernetes/: README.md
Kubernetes/simple_web_server/: 0_config.yaml  1_deployment.yaml  1_pod.yaml  2_service_clusterip.yaml  2_service_loadbalancer.yaml  2_service_nodeport.yaml  3_ingress.yaml
SpringBoot/: README.md  build.gradle
SpringBoot/src/main/resources/: application.properties
SpringExperiment/: build.gradle  settings.gradle
SpringExperiment/src/main/resources/persistence/: init_db.sql
fastapi_asyncio/: README.md  server.py  subchild.py
python_poetry/: .gitignore  README.md  pyproject.toml
python_poetry/mypackage/: __main__.py  mymodule.py
(+47 files in other folders)
